<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/nav_home"
    android:icon="@drawable/ic_home_black_24dp"
    android:title="@string/home"
    />
    <item
        android:id="@+id/nav_discussion"
        android:icon="@drawable/ic_question_answer_black_24dp"
        android:title="@string/discussion"
        />

    <item
        android:id="@+id/nav_ask"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/asks_and_haves"
        />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications"
        />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/profile"
        />


</menu>