<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Main2ActivityCreateEvent">



    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_an_event"
        android:textSize="20sp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/agenda"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_agenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/agenda"
        />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/in_date"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:hint="@string/date" />

        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/in_date"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/in_date"
            android:layout_toRightOf="@+id/in_date"
            android:text="SELECT DATE" />

        <EditText
            android:id="@+id/in_time"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/in_date"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:hint="@string/time" />

        <Button
            android:id="@+id/btn_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_date"
            android:layout_alignStart="@+id/btn_date"
            android:layout_alignLeft="@+id/btn_date"
            android:layout_marginBottom="2dp"
            android:text="SELECT TIME" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/needs"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/et_needs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/needs" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/haves"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_haves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/haves" />

    <TextView
        android:id="@+id/textView_CreateLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/create_link"
        android:textSize="18sp" />

    <Button
        android:id="@+id/et_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/create_link" />

    <Button
        android:id="@+id/BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="bottom"
        android:text="@string/create_event" />


</LinearLayout>