<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_club"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:textStyle="italic"
        android:textColor="@color/orange"/>
    <TextView
        android:id="@+id/clubname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/club_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/orange"/>

    <EditText
        android:textColorLink="@color/black"
        android:id="@+id/clubnameedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/objectives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/objectives"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/orange"/>

    <EditText
        android:id="@+id/objectivesedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/president"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/president"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/orange"/>


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:spinnerMode="dialog">
    </Spinner>


    <TextView
        android:id="@+id/secretary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secretary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/orange"/>


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:spinnerMode="dialog"
        >
    </Spinner>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_club"
        android:layout_marginTop="120dp"
        style="@style/AlertDialog.AppCompat.Light"
        android:layout_gravity="center"
        android:textColor="@color/orange"
        android:background="@color/lightgrey"/>

</LinearLayout>